# Shun4miTeX

./: .gitignore  CMakeLists.txt  Calculator_Doc.md  Dockerfile  LICENSE  Natural_Doc.md  README.md  render.sh
bot/: bot.cpp
bot/env_parser/: env_parser.cpp  env_parser.h
cmake/: FindDPP.cmake
docs/: Calculator_Doc.md  Natural_Doc.md
src/: cli.cpp  latex_render.h
src/calculator/: calculator.cpp  calculator.h
src/latex_render/: latex_render.cpp
src/natural_math/: natural_math.cpp  natural_math.h
